# DTVM

./: .clang-tidy  .gitignore  .gitmodules  BUILD.bazel1.2.1  NOTICE  README.md
.ci/: run_test_suite.sh
.github/workflows/: dtvm_evm_test_x86.yml  dtvm_test_x86.yml
docs/: start.md  user-guide.md
rust_crate/: Cargo.toml  build.rs
rust_crate/evm_example/: Cargo.toml
rust_crate/evm_example/src/: contract_executor.rs  lib.rs  mock_context.rs  mock_evm_bridge.rs
rust_crate/evm_example/tests/: advanced_host_test.rs  base_host_test.rs  contract_calls_test.rs  counter_test.rs  simple_token_test.rs
rust_crate/evm_example/tests/common/: calldata.rs  decode.rs  mod.rs
rust_crate/example/: AdvancedHostFunctions.sol  BaseHostFunctions.sol  ContractCalls.sol  SimpleTarget.sol  SimpleToken.sol  counter.sol  infinite.wast
rust_crate/src/: lib.rs
rust_crate/src/evm/: error.rs  mod.rs  traits.rs  utils.rs
rust_crate/src/evm/host_functions/: account.rs  block.rs  code.rs  contract.rs  control.rs  crypto.rs  fee.rs  log.rs  math.rs  mod.rs  storage.rs  transaction.rs
rust_crate/src/gas_metering/: gas_inject.rs  mod.rs  transform.rs  validation.rs
rust_crate/src/tests/: evm_test.rs  gas_test.rs  mod.rs
src/action/: bytecode_visitor.h  compiler.cpp  compiler.h  evm_bytecode_visitor.h  evm_module_loader.h  vm_eval_stack.h
src/cli/: dtvm.cpp
src/common/: const_string_pool.cpp  errors.def
tools/: compare_mpt.sh  easm2bytecode.py  easm2bytecode.sh  function_selector.py  mpt_compare_js.js  mpt_compare_py.py  requirements.txt  run_evm_tests.py  solc_batch_compile.sh
(+186 files in other folders)
